# libsql-android

./: .gitignore  CONTRIBUTING.md  README.md  build.gradle.kts  kls_database.db  rust-toolchain.toml  settings.gradle.kts
examples/todo/: build.gradle.kts
examples/todo/src/main/: AndroidManifest.xml
examples/todo/src/main/kotlin/tech/turso/libsql/examples/todo/: MainActivity.kt
examples/todo/src/main/kotlin/tech/turso/libsql/examples/todo/ui/theme/: Theme.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libsql/: build.gradle.kts
libsql/src/androidTest/java/tech/turso/libsql/: LibsqlTest.java
libsql/src/main/java/tech/turso/libsql/: Connection.java  Database.java  EmbeddedReplicaDatabase.java  Libsql.java  Rows.java
libsql/src/main/kotlin/tech/turso/libsql/: Connection.kt  ConnectionImpl.kt  Database.kt  EmbeddedReplicaDatabase.kt  Libsql.kt  Rows.kt  RowsIterator.kt  Transaction.kt  ValueType.kt
libsql/src/main/proto/: libsql.proto
libsql/src/main/rust/: Cargo.toml  build.rs
libsql/src/main/rust/.cargo/: config.toml
libsql/src/main/rust/src/: lib.rs
libsql_android/: build.gradle.kts
libsql_android/src/main/java/tech/turso/libsql/: Connection.java  Libsql.java  Rows.java
libsql_android/src/main/jni/: Android.mk  uselib.c
libsql_android/src/main/jni/libsql_android/libsql/: build.rs
libsql_android/src/main/jni/libsql_android/libsql/src/: lib.rs
libsql_android/src/main/rust/: Cargo.toml
